added invoice html source

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,15 @@
         <title>Screenshot as a service</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54432200-3"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-54432200-3');
+    </script>
     <style>
 
       body {
@@ -64,8 +73,8 @@
               <img src="public/span_with_style_pdf.jpg" alt="" width="100%"/>
               <hr>
               <p>You can have a more complex PDF with images and styles like this! 🔥</p>
-              <p>if you want the html for this invoice, check it out here</p>
               <img src="public/complex_pdf.jpg" alt="" width="100%"/>
+              <p>if you want the original html for this invoice, <a href="https://github.com/sparksuite/simple-html-invoice-template">check it out here</a></p>
           </div>
         </div>
     </body>
