--- a/public/index.html
+++ b/public/index.html
@@ -2,18 +2,18 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title>Screenshot as a service</title>
+        <title>Serverless PDF</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54432200-3"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54432200-3"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
 
-      gtag('config', 'UA-54432200-3');
-    </script>
+          gtag('config', 'UA-54432200-3');
+        </script>
+    </head>
     <style>
 
       body {
